Picture-Offset in downsized Animation-Render not Working #80424

Closed
opened 2020-09-03 10:27:59 +02:00 by Vincent Lexau · 7 comments

System Information
Operating system: Windows 7 Prof
Graphics card: Geforce gtx 980

Blender Version
Broken: (example: 2.90, edbf15d3c0, master, 2018-11-28, as found on the splash screen)
Worked: 2.81 (newest version of Blender that worked as expected)

Short description of error
BlenderBug.JPG Picture in Videosequencer will not be adjusted to the minimized output resolution when it is set to offset in the strip settings . You can See everything in the screenshot. The Preview in the sequencer is right.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).
add a picture to the videosequencer
set it to offset in the strip settings
reduce the percent of the output resolution
render animation

**System Information** Operating system: Windows 7 Prof Graphics card: Geforce gtx 980 **Blender Version** Broken: (example: 2.90, edbf15d3c044, master, 2018-11-28, as found on the splash screen) Worked: 2.81 (newest version of Blender that worked as expected) **Short description of error** ![BlenderBug.JPG](https://archive.blender.org/developer/F8835791/BlenderBug.JPG) Picture in Videosequencer will not be adjusted to the minimized output resolution when it is set to offset in the strip settings . You can See everything in the screenshot. The Preview in the sequencer is right. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). add a picture to the videosequencer set it to offset in the strip settings reduce the percent of the output resolution render animation
Author

Added subscriber: @vlexau

Added subscriber: @vlexau
Vincent Lexau changed title from Picture-Zoom in downsized Render not Working to Picture-Offset in downsized Animation-Render not Working 2020-09-03 10:28:46 +02:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I cannot reproduce the problem.
Could you provide a simple file showing it?

I cannot reproduce the problem. Could you provide a simple file showing it?

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author

martinrede 13 MA.blend

Hi Germano, the file is attached now.

Maybe the following fact is important: I am using the portable Windows Version.

[martinrede 13 MA.blend](https://archive.blender.org/developer/F8853244/martinrede_13_MA.blend) Hi Germano, the file is attached now. Maybe the following fact is important: I am using the portable Windows Version.
Richard Antalik was assigned by Dalai Felinto 2020-09-08 16:19:29 +02:00

This issue was referenced by 0d7036b40e

This issue was referenced by 0d7036b40e68496fe36d7cbc8113b63574dd9d57

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80424
No description provided.