Fix T80424: Image not scaled when rendering

This is was caused by incorrectly set `preview_render_size` in VSE
rendering context. Value was set to `SEQ_PROXY_RENDER_SIZE_FULL`, but
it should be `SEQ_PROXY_RENDER_SIZE_SCENE` as scene render size is
being used.

Alternatively we can check for `context->for_render` in
`input_preprocess()`, but I think fix above is more correct.

Reviewed By: sergey, brecht

Maniphest Tasks: T80424

Differential Revision: https://developer.blender.org/D8838